   + regexShapeMethod : regex for shapeMethod parsing
   + regexShapeConversion : regex for shapeConversion parsing
   + shapeMethod member + getter
   + shapeConversion member + getter
   * constructor :
     + argument for shapeMethod/shapeConversion
     + sanity check of shapeMethod/shapeConversion if shapeFile non-empty
   * copyconstructor :
     + copying of shape* members
 * IntaRNA/Accessibility :
   * adaptation to AccessibilityConstraint constructor changes
 * IntaRNA/AccessibilityVrna :
   * fillByRNAplfold() :
     + get shapeMethod and shapeConversion from AccessibilityConstraint
 * bin/CommandLineParsing :
   * adaptation to AccessibilityConstraint constructor changes
   + SHAPE argument list
     * q|tShape : moved here from query|target argument list
     + q|tShapeMethod : method to convert SHAPE to pseudo energies
     + q|tShapeConversion : method to convert SHAPE to pairing probabilities

1802 Martin Raden :
 * IntaRNA/AccessibilityConstraint :
   * constructor() :
     - default arguments removed to avoid wrong constructor selection
     + shapeFile argument to pass file name of SHAPE reactivity data to be used
   + shapeFile member + getter
   * isEmpty() :
     + check if shapeFile empty
   * operator<< :
     + output of shapeFile if non-empty
 * IntaRNA/Accessibility :
   * adaptation to AccessibilityConstraint constructor changes
 * IntaRNA/AccessibilityVrna :
   * fillByRNAplfold() :
     + call vrna_constraints_add_SHAPE() if shapeFile of AccessibilityConstraint
       not empty
 * bin/CommandLineParsing :
   + q/tShape argument + validation : file name from which to read SHAPE
     reactivity data to guide accessibility computation (via soft constraints)
   * adaptation to AccessibilityConstraint constructor changes
   * unification of parsing code update via usage of updateParsingCode()

180111 Martin Raden :
 * IntaRNA/Accessibility:
   + decomposeByMinPu() : decomposes a given list of ranges to subranges by